# HK

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  ersAdminDocumentsProjectsHKEngine && git status  main.cpp  vcpkg.json
.cache/clangd/index/: main.cpp.B3C1913B3672C571.idx
Builtin/Shader/: Common.slang  SimpleShading.slang
Debug/: .gdbinit  .lldbinit  HKEngine.natvis  gdb_formatters.py  lldb_formatters.py
Engine/Config/: ConfigManager.cpp  ConfigManager.h  EngineConfig.cpp  EngineConfig.h  IConfig.cpp  IConfig.h
Engine/Core/Container/: Array.h  Bitmap.h  Buffer.h  FixedArray.h  LruCache.h  Map.h  OrderedMap.h  Span.h  Tuple.h  Variant.h
Engine/Core/Event/: Delegate.h  Event.h
Engine/Core/Logging/: LogDefine.h  Logger.cpp  Logger.h
Engine/Core/Reflection/: Any.h  AnyRef.h  Property.cpp  Property.h  Reflection.h  ReflectionFwd.h  Type.cpp  Type.h  Type.inl  TypeManager.cpp  TypeManager.h  TypeManager.inl
Engine/Core/Serialization/: BinaryArchive.h  JsonArchive.h  MemoryStream.cpp  MemoryStream.h  Serialization.h  XMLArchive.h
Engine/Core/Singleton/: Singleton.h
Engine/Core/String/: Name.cpp  Name.h  String.cpp  String.h  StringFormatter.h  StringView.cpp  StringView.h
Engine/Core/Time/: Time.h  TimeDuration.cpp  TimeDuration.h  TimePoint.cpp  TimePoint.h
Engine/Core/Utility/: Expected.h  FileUtility.cpp  FileUtility.h  HashUtility.cpp  HashUtility.h  Macros.h  Optional.h  Profiler.h  Ref.h  RefCounted.h  SharedPtr.h  TypeTraits.h  UniquePtr.h  Uuid.cpp  Uuid.h  WeakPtr.h
Engine/Loop/: EngineLoop.cpp  EngineLoop.h  EngineLoopEvents.cpp  EngineLoopEvents.h  LoopData.cpp  LoopData.h
Engine/Math/: Color.h  Matrix.cpp  Matrix.h  Rect2D.cpp  Rect2D.h  TestClass.h  TestStruct.h  Transform.cpp  Transform.h  Vector.cpp  Vector.h
Engine/Object/: Actor.cpp  Actor.h  Asset.cpp  Asset.h  AssetImporter.cpp  AssetImporter.h  AssetLoader.cpp  AssetLoader.h  AssetManager.cpp  AssetManager.h  AssetRegistry.cpp  AssetRegistry.h  AssetUtility.cpp  AssetUtility.h  Component.cpp  Component.h  Object.cpp  Object.h  ObjectPtr.cpp  ObjectPtr.h  SceneComponent.cpp  SceneComponent.h  TransformManager.cpp  TransformManager.h
Engine/RHI/: GfxDevice.cpp  GfxDevice.h  RHIBuffer.cpp  RHIBuffer.h  RHICommand.h  RHICommandBuffer.cpp  RHICommandBuffer.h  RHICommandPool.h  RHIConfig.cpp  RHIConfig.h  RHIDescriptorSet.cpp  RHIDescriptorSet.h  RHIHandle.cpp  RHIHandle.h  RHIImage.cpp  RHIImage.h  RHIImageView.h  RHIPipeline.cpp  RHIPipeline.h  RHISampler.h  RHISync.cpp  RHISync.h  RHIWindow.cpp  RHIWindow.h
Engine/RHI/Vulkan/: GfxDeviceVk.cpp  GfxDeviceVk.h  RHIBufferVk.cpp  RHICommandBufferVk.cpp  RHICommandPoolVk.cpp  RHIDescriptorSetVk.cpp  RHIDeviceVK.cpp  RHIDeviceVk.cpp  RHIDeviceVk.h  RHIImageViewVk.cpp  RHIImageVk.cpp  RHIPipelineVk.cpp  RHISamplerVk.cpp  RHISwapChainVk.cpp  RHISyncVk.cpp
Engine/Render/: GlobalRenderResources.cpp  GlobalRenderResources.h  GlobalStaticResourcesPool.cpp  GlobalStaticResourcesPool.h  RenderConfig.cpp  RenderConfig.h  RenderContext.cpp  RenderContext.h  RenderOptions.h  RenderTarget.cpp  RenderTarget.h
Engine/Render/Components/: RendererComponent.cpp  RendererComponent.h  StaticMeshComponent.cpp  StaticMeshComponent.h
Engine/Render/Material/: Material.cpp  Material.h  SharedMaterial.cpp  SharedMaterial.h
Engine/Render/Mesh/: Mesh.cpp  Mesh.h  MeshImporter.cpp  MeshImporter.h  MeshLoader.cpp  MeshLoader.h  MeshUtility.cpp  MeshUtility.h
Engine/Render/Pipeline/: HKRenderPipeline.cpp  HKRenderPipeline.h  RenderPipeline.cpp  RenderPipeline.h
Engine/Render/Renderer/: Renderer.cpp  Renderer.h  RendererManager.cpp  RendererManager.h  StaticMeshRenderer.cpp  StaticMeshRenderer.h
Engine/Render/Shader/: Shader.cpp  Shader.h  ShaderImporter.cpp  ShaderImporter.h  ShaderLoader.cpp  ShaderLoader.h  ShaderParameterSheet.cpp  ShaderParameterSheet.h  ShaderUtility.cpp  SlangCompiler.cpp  SlangCompiler.h  SlangTranslator.cpp  SlangTranslator.h
Engine/Render/Texture/: GlobalTexturePool.cpp  GlobalTexturePool.h  RenderTexture.cpp  RenderTexture.h  Texture.cpp  Texture.h  TextureImporter.cpp  TextureImporter.h  TextureLoader.cpp  TextureLoader.h  TextureUtility.cpp  TextureUtility.h
Engine/TaskGraph/: Executor.cpp  Executor.h  Semaphore.cpp  Semaphore.h  Task.cpp  Task.h  TaskGraph.cpp  TaskGraph.h  ThreadSafeArray.h  ThreadSafeMap.h  ThreadSafeQueue.h
Scripts/: HeaderTools.py
